# killcode

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  oauth  run_wait
mailer/: Cargo.toml  Dockerfile.dev  Dockerfile.prod
mailer/src/: handlers.rs  lib.rs  main.rs  models.rs  queue.rs  smtp.rs  templates.rs
mailer/src/templates/: license_created.html  otp.html  welcome.html
mailer/templates/: otp_2fa.html  password_reset.html
scripts/: init-mongodb-keyfile.sh  init-replica-set.sh  mongo-init.sh
scripts/development/: test_complete_flow.sh  test_e2e.sh  test_health_and_sse.sh  test_license_complete.sh  test_license_system.sh  test_license_verify.sh  test_merge_api.sh  test_overload_direct.sh  test_overload_rust.sh  test_overload_rust_v2.sh  test_overload_simple.sh  test_revoke.sh  test_sse.sh  test_sync_mode_live.sh  test_sync_quick.sh  test_upload_download_execute.sh
scripts/tests/: test_api_enhancements.sh  test_continuous_verification.sh  test_grace_period.sh  test_telemetry.sh  test_upload_download_execute.sh  test_verification_failure.sh
scripts/utils/: quickstart.sh
